Rewrite README, some code health stuff (#165)
- Rewrite README
- Rakefile improvements
- add umdio.sh to alias docker-compose exec bundle exec rake
- Format some files
- Add umdio-data as submodule, add ability to import from it
 - Add v1 root
